--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@supabase/supabase-js": "^2.52.1",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.10",
+    "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "dayjs": "^1.11.13",
     "formik": "^2.4.9",
