--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.0",
     "react-router-hash-link": "^2.4.3",
+    "react-to-print": "^3.2.0",
     "react-toastify": "^11.0.5",
     "recharts": "^3.1.0",
     "stripe": "^20.0.0",
