show visa details sorted

--- a/.hintrc
+++ b/.hintrc
@@ -9,7 +9,8 @@
         "ignore": [
           "backdrop-filter",
           "scrollbar-width",
-          "scrollbar-color"
+          "scrollbar-color",
+          "-moz-appearance"
         ]
       }
     ]
